--- a/boke/pom.xml
+++ b/boke/pom.xml
@@ -40,10 +40,11 @@
             <optional>true</optional>
         </dependency>
         <!--log4j依赖-->
+        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
         <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.17.1</version>
         </dependency>
         <!-- 数据连接池 druid-->
         <dependency>
